# rsomics-popgen-core

./: Cargo.toml
src/: diversity.rs  hw.rs  ld.rs  lib.rs
